[project]
name = "small-project"
version = "0.1.0"
description = "test"
authors = [
    {name = "Serg"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqladmin[full] (>=0.24.0,<0.25.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
